 * Fix airplane line being drawn above many HUD elements
 * Suppress “<team> is gone.” message at end of game
 * Fix game engine ignoring appropriate number formatting of user language
 * Fix buggy behaviour when entering speech bubble command in hog placement phase

Translations:
 + Major update: Chinese
 + Credits page is now translatable
 * Remove Arabic translation from release

Frontend:
 + Add button in main menu at top left corner to open credits page
 + Restructure credits page
 + More intelligent automatic mission selection in campaign screen
 + New data directory for video thumbnails: Data/VideoThumbnails
 + Display a warning when the same key is used multiple times
 + Stats screen now hides empty sections
 * Fix broken handling of /watch chat command on official server
 * Fix renaming a video leading to loss of thumbnail after restart
 * Fix controls list failing to display correct key names with regards to keyboard layout
 * Fix force-locked schemes getting unlocked when changing map types
 * Fix possible to select background-only or hidden themes indirectly by changing map type
 * Disallow slash, backslash and colon characters in team and scheme names

Sounds and voicepacks:
 + sndYoohoo has been split to sndYoohoo and sndKiss
 + Voice files sndPoisonCough and sndPoisonMoan are now optional (fall back to Default voicepack)
 + Add taunt: sndFlyAway / Flyaway.ogg: When hedgehog flies off the map
 + Tweak some taunts: sndFirstBlood, sndLeaveMeAlone, sndCutItOut
 * Fix English voicepack selection of team being overwritten when playing in non-English locale

Lua API:
 + New call: SaveMissionVar(varname, value): Save value to mission variable (variable for non-campaign mission)
 + New call: GetMissionVar(varname): Get value of mission variable
 + New call: SetTurnTimePaused(isPaused): Call with true to pause turn time, false to unpause
 + New call: GetTurnTimePaused(): Returns true if turn time is paused due to Lua